fix some alignment issue in speedmath and coding

--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ svg {
 }
 
 .section-component-layout {
-  height: calc(100% - 86px - 101.28px);
+  height: calc(100% - 60px - 107.28px);
 
   flex-direction: row-reverse;
   position: relative;
